# trpc

./: .gitignore  LICENSE  trpc.cabal
app/: Main.hs
src/: Lib.hs  RPC.hs
