name:                trpc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/manuelp/trpc#readme
license:             BSD3
license-file:        LICENSE
author:              Manuel Paccagnella
maintainer:          manuel.paccagnella@gmail.com
copyright:           2017 Manuel Paccagnella
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RPC
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable trpc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , trpc
                     , wai
                     , http-types
                     , warp
                     , bytestring
                     , text
                     , aeson
  default-language:    Haskell2010

test-suite trpc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trpc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/manuelp/trpc
